alpm-parsers/tests/snapshots/integration__write_ini::case_1_missing_key.snap
---
source: alpm-parsers/tests/integration.rs
expression: "format!(\"{err}\")"
snapshot_kind: text
---
= value
^
invalid key
expected a key followed by a ` = ` delimiter.
