alpm-parsers/tests/snapshots/integration__write_ini::case_2_incomplete_delimiter_1.snap
---
source: alpm-parsers/tests/integration.rs
expression: "format!(\"{err}\")"
snapshot_kind: text
---
key= value
   ^
invalid delimiter
expected a '=' that delimits the key value pair, surrounded by a single space.
